<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_details_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textview_details_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_display_details_textview_id"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textview_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_display_details_textview_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textview_details_originalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_display_details_textview_originalTitle"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textview_details_originalLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_display_details_textview_originalLanguage"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>